# mongo-resilient-evolvability-demo

./: Cargo.toml  LICENSE  README.md
data/: book-data-prep-for-app1.js  book-data-prep-for-app2.js
src/: main.rs
src/app1/: db.rs  mod.rs
src/app2/: db.rs  mod.rs
tests/: test_app1.sh  test_app2.sh
