[package]
name = "mongo-robust-fluidity-demo"
version = "0.1.0"
authors = ["Paul Done"]
edition = "2018"

[dependencies]
bson = "1.1.*"
chrono = "0.4.*"
futures = { version = "0.3.*"}
mongodb = "1.1.*"
serde = {version = "1.0.*", features = ["derive"]}
tokio = {version = "0.2.*", features = ["full"]}
warp = "0.2.*"
