[package]
name = "mongo-robust-fluidity-demo"
version = "0.2.0"
authors = ["Paul Done"]
edition = "2021"

[dependencies]
bson = "2.1.*"
futures = {version = "0.3.*"}
mongodb = "2.1.*"
serde = {version = "1.0.*", features = ["derive"]}
tokio = {version = "1.4.*", features = ["full"]}
warp = "0.3.*"

